--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
             <div class="d-flex mx-auto" style="width: 50%;">
                 <input class="form-control me-2 search-bar" type="search" placeholder="Enter Your Ingredients" aria-label="Search">
-                <button class="btn search-btn" type="submit">Submit</button>
+                <button class="btn search-btn" type="submit">Search</button>
             </div>
 
             <div class="d-flex ms-auto" style="margin-right: 20px;">
