--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
             overflow: hidden;
             margin-top: 20px; /* Added margin for spacing */
             z-index: -1;
+            border: 5px solid black; /* Solid black border */
+            border-radius: 10px;
 
             /* width: 100%;
             height: 75vh;
