--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         .scroll-text {
             display: inline-block;
             white-space: nowrap;
-            animation: scroll 10s linear infinite;
+            animation: scroll 20s linear infinite;
             font-size: 24px;
             font-weight: bold;
             text-align: center;
@@ -131,7 +131,7 @@
 
             <div class="d-flex mx-auto" style="width: 50%;">
                 <input class="form-control me-2 search-bar" type="search" placeholder="Enter Your Ingredients" aria-label="Search">
-                <button class="btn search-btn" type="submit">Search</button>
+                <button class="btn search-btn" type="submit">Submit</button>
             </div>
 
             <div class="d-flex ms-auto" style="margin-right: 20px;">
@@ -143,7 +143,7 @@
 
     <!-- Scrolling Text -->
     <div class="scroll-text-container">
-        <div class="scroll-text">WELCOME TO <b>CookXpert</b></div>
+        <div class="scroll-text"><h1>Welcome To <b>CookXpert</b></h1></div>
     </div>
 
     <!-- Image Section -->
