--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Custom Styles -->
     <style>
         body {
-            background-color: rgb(165, 70, 1);
+            background-color: white;
             font-family: Arial, sans-serif;
         }
 
@@ -131,7 +131,7 @@
 
             <div class="d-flex mx-auto" style="width: 50%;">
                 <input class="form-control me-2 search-bar" type="search" placeholder="Enter Your Ingredients" aria-label="Search">
-                <button class="btn search-btn" type="submit">Submit</button>
+                <button class="btn search-btn" type="submit">Search</button>
             </div>
 
             <div class="d-flex ms-auto" style="margin-right: 20px;">
@@ -143,7 +143,7 @@
 
     <!-- Scrolling Text -->
     <div class="scroll-text-container">
-        <div class="scroll-text"><h1>Welcome To <b>CookXpert</b></h1></div>
+        <div class="scroll-text"><h1>Welcome to <b>CookXpert</b></h1></div>
     </div>
 
     <!-- Image Section -->
@@ -174,7 +174,7 @@
 
     <footer class="bg-warning-subtle text-black text-center py-3" id="footer">
         <div class="container">
-            <p class="mb-0">Contact us: <a href="mailto:cookXpert@gmail.com" class="text-black text-decoration-none">info@yourcompany.com</a></p>
+            <p class="mb-0">Contact us: <a href="mailto:cookXpert@gmail.com" class="text-black text-decoration-none">cookXpert@gmail.com</a></p>
             <p class="mb-0">Phone: +91 9876543210</p>
         </div>
     </footer>
