--- a/explore.html
+++ b/explore.html
@@ -62,7 +62,7 @@
 
 
             <div class="d-flex ms-auto" style="margin-right: 20px;">
-                <a class="nav-link me-3 active" href="#index.html">Home</a>
+                <a class="nav-link me-3 active" href="index.html">Home</a>
                 <a class="nav-link" href="#footer">Contact Us</a>
             </div>
         </div>
