--- a/explore.html
+++ b/explore.html
@@ -65,7 +65,7 @@
                 <span class="navbar-brand">CookXpert</span>
             </div>
             <div class="d-flex ms-auto" style="margin-right: 20px;">
-                <a class="nav-link me-3 active" href="index-RecGen.html">Home</a>
+                <a class="nav-link me-3 active" href="index.html">Home</a>
                 <a class="nav-link" href="#footer">Contact Us</a>
             </div>
         </div>
